// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     expenses totalling 
    $12,312,412.41
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     expenses totalling 
    $2.40
  </h2>
</div>
`;
